--- a/myportifolio.github.io/Kefline/portfolio.html
+++ b/myportifolio.github.io/Kefline/portfolio.html
@@ -73,7 +73,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
         <p>Here are some of the key projects I have worked on, ranging from web applications to IoT systems.</p>
-      </div><
+      </div>
   
       <div class="container">
   
@@ -83,7 +83,7 @@
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-web">Web Projects</li>
             <li data-filter=".filter-iot">IoT Projects</li>
-          </ul><
+          </ul>
   
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
   
