--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<title>Kefline Kichiba - Web & Software Developer Portfolio</title>
+	<title>Kefline Kichiba -programmer & database administrator Portfolio</title>
 	<meta name="description" content="Professional portfolio of Kefline Kichiba - Full Stack Web Developer and Software Developer">
 	<meta name="keywords" content="web developer, software developer, full stack developer, portfolio, Kefline Kichiba">
 
@@ -32,8 +32,8 @@
 			<div class="row">
 				<div class="col-lg-8 d-flex flex-column justify-content-center">
 					<h1 data-aos="fade-up">Kefline Kichiba</h1>
-					<h2 data-aos="fade-up" data-aos-delay="400">Web Developer & Software Engineer</h2>
-					<p data-aos="fade-up" data-aos-delay="400">Crafting elegant solutions through code. Specialized in full-stack web development and software engineering.</p>
+					<h2 data-aos="fade-up" data-aos-delay="400">Programmer & Database administrator</h2>
+					<p data-aos="fade-up" data-aos-delay="400">Crafting elegant solutions through code. Specialized in full-stack web development and database administration.</p>
 					<div data-aos="fade-up" data-aos-delay="600">
 						<div class="text-center text-lg-start">
 							<a href="#portfolio" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
