--- a/myportifolio.github.io/Kefline/about.html
+++ b/myportifolio.github.io/Kefline/about.html
@@ -78,7 +78,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>I am a hardworking, dedicated individual with a strong foundation in web development and database administration. I thrive in team environments and am always eager to take on new challenges.</p>
+        <p> am a hardworking, dedicated individual with a strong foundation in web development and database administration. I thrive in team environments, can work effectively under pressure, and am always eager to take on new challenges.</p>
       </div><!-- End Section Title -->
   
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -94,23 +94,20 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>20 September 2001</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://hotel-booking-portal.vercel.app/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+255766144617 / +255761516492</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Dar es Salaam, TANZANIA</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor of Science in Computer Science</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>maduhukefline64@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:maduhukefline64@gmail.com">maduhukefline64@gmail.com</a></span></li>
+
                 </ul>
               </div>
             </div>
             <p class="py-3">
-              I have gained practical experience in networking, backend development, and database management through internships at Dataflow Telecoms and Shulesoft Limited. I am capable of working independently or in a team, and I am committed to continuous improvement and embracing new technologies.
+              I have gained practical experience in networking, backend development, and database management through internships at Dataflow Telecoms and Shulesoft Limited. I am capable of working independently or in a team, can work well under pressure, and am committed to continuous improvement and embracing new technologies.
             </p>
           </div>
         </div>
