--- a/myportifolio.github.io/Kefline/resume.html
+++ b/myportifolio.github.io/Kefline/resume.html
@@ -95,7 +95,8 @@
               <ul>
                 <li>Dar es Salaam, Tanzania</li>
                 <li>+255 766 144 617 / +255 696 373 783</li>
-                <li>maduhukefline64@gmail.com</li>
+                <li><span><a href="mailto:maduhukefline64@gmail.com">maduhukefline64@gmail.com</a></span></li>
+
               </ul>
             </div><!-- End Resume Item -->
   
@@ -104,15 +105,10 @@
               <h4>Bachelor of Science in Computer Science</h4>
               <h5>2022 – Present</h5>
               <p><em>University of Dar es Salaam, Tanzania</em></p>
-              <p>Ongoing undergraduate studies focused on software development, algorithms, databases, and systems design.</p>
+              <p>Currently pursuing undergraduate studies with a strong focus on software development, algorithms, database systems, and systems design. Gaining comprehensive knowledge in object-oriented programming, data structures, and software engineering principles, while developing practical skills through hands-on projects and collaborative coursework.</p>
             </div><!-- End Resume Item -->
   
-            <div class="resume-item">
-              <h4>Advanced Certificate of Secondary Education</h4>
-              <h5>2020 – 2022</h5>
-              <p><em>Nyampulukano High/Secondary School</em></p>
-              <p>Graduated with a strong science background supporting entrance into the technology field.</p>
-            </div><!-- End Resume Item -->
+            
           </div>
   
           <!-- Right Column -->
