--- a/myportifolio.github.io/Kefline/services.html
+++ b/myportifolio.github.io/Kefline/services.html
@@ -88,6 +88,7 @@
             </div>
           </div>
   
+          <!-- Database Design & Management -->
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item item-orange position-relative">
               <div class="icon">
@@ -100,6 +101,7 @@
             </div>
           </div>
   
+          <!-- Backend/API Development -->
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item item-teal position-relative">
               <div class="icon">
@@ -112,6 +114,7 @@
             </div>
           </div>
   
+          <!-- CMS Integration -->
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item item-red position-relative">
               <div class="icon">
@@ -124,18 +127,20 @@
             </div>
           </div>
   
+          <!-- System Architecture & Optimization -->
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item item-indigo position-relative">
               <div class="icon">
-                <i class="bi bi-house-door"></i>
+                <i class="bi bi-diagram-3"></i>
               </div>
               <a href="#" class="stretched-link">
-                <h3>Hotel Management Systems</h3>
+                <h3>System Architecture & Optimization</h3>
               </a>
-              <p>Development and support of hotel reservation, billing, and room management systems tailored to hospitality industry needs.</p>
+              <p>Designing scalable backend architectures, optimizing database performance, and ensuring reliability across distributed systems.</p>
             </div>
           </div>
   
+          <!-- IT & Technical Support -->
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item item-pink position-relative">
               <div class="icon">
@@ -153,6 +158,7 @@
     </section>
   
   </main>
+  
   
 
   <footer id="footer" class="footer light-background">
