--- a/myportifolio.github.io/Kefline/index.html
+++ b/myportifolio.github.io/Kefline/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 
-<!-- Mirrored from themewagon.github.io/Kelly/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 May 2025 07:51:12 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -30,13 +29,7 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Kelly
-  * Template URL: https://bootstrapmade.com/kelly-free-bootstrap-cv-resume-html-template/
-  * Updated: Aug 07 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body class="index-page">
@@ -45,8 +38,7 @@
     <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
+
         <h1 class="sitename">Kefline</h1>
       </a>
 
@@ -81,14 +73,13 @@
         <div class="row justify-content-center">
           <div class="col-lg-8">
             <h2>Kefline Kichiba</h2>
-            <p>I’m a professional Web Developer &amp; Database Administrator</p>
+            <p>I’m a professional Programmer &amp; Database Administrator</p>
             <a href="about.html" class="btn-get-started">About Me</a>
           </div>
         </div>
       </div>
-    </section><!-- End Hero Section -->
+    </section>
   
-    <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section">
   
       <div class="container section-title" data-aos="fade-up">
@@ -99,49 +90,19 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row skills-content skills-animation">
   
-          <div class="col-lg-6">
+
+  
+          <div class="col-lg-12">
   
             <div class="progress">
-              <span class="skill">HTML <i class="val">95%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="95"></div>
-              </div>
-            </div>
-  
-            <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90"></div>
-              </div>
-            </div>
-  
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">React <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75"></div>
               </div>
             </div>
   
             <div class="progress">
-              <span class="skill">PHP <i class="val">85%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="85"></div>
-              </div>
-            </div>
-  
-          </div>
-  
-          <div class="col-lg-6">
-  
-            <div class="progress">
-              <span class="skill">Laravel <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75"></div>
-              </div>
-            </div>
-  
-            <div class="progress">
-              <span class="skill">CodeIgniter <i class="val">70%</i></span>
+              <span class="skill">Laravel <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70"></div>
               </div>
@@ -173,9 +134,8 @@
         </div>
       </div>
   
-    </section><!-- End Skills Section -->
+    </section>
   
-    <!-- ======= Stats Section ======= -->
     <section id="stats" class="stats section">
   
       <div class="container section-title" data-aos="fade-up">
@@ -202,8 +162,8 @@
   
           <div class="col-lg-3 col-md-6">
             <div class="stats-item text-center w-100 h-100">
-              <span data-purecounter-start="0" data-purecounter-end="800" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hours Of Support</p>
+              <span data-purecounter-start="0" data-purecounter-end="24" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Hours Daily Support</p>
             </div>
           </div>
   
